--- a/android.html
+++ b/android.html
@@ -127,7 +127,7 @@
         </article>
     </main>
     <footer>
-        Site criado por <a href="https://github.com/victorhosantana" target="_blank">Victor Santana</a> como exercício do <a href="https://www.cursoemvideo.com" target="_blank">CursoemVideo</a>.
+        Site criado por <a href="https://github.com/victorhosantana" target="_blank">Victor Santana</a> como exercício dos estudos de HTML e CSS do <a href="https://www.cursoemvideo.com" target="_blank">CursoemVideo</a>.
     </footer>
 </body>
 
